2013-08-01 Miguel de Dios <miguel.dedios@artica.es>
	
	* enterprise/godmode/agentes/agent_disk_conf_editor.php,
	enterprise/godmode/agentes/collection_manager.php,
	enterprise/godmode/policies/policy_agents.php,
	enterprise/include/functions_collection.php,
	enterprise/include/functions_policies.php,
	enterprise/include/functions_config_agents.php,
	enterprise/operation/agentes/collection_view.php: fixed and unified
	the code to access the remote config.
	
	MERGED FROM BRANCH PANDORA_4

2013-08-01  Sergio Martin <sergio.martin@artica.es>

	* include/functions_filemanager.php
	images/upload_file.png
	images/edit.png
	images/mimetypes/unknown.png
	images/mimetypes/image.png
	images/mimetypes/zip.png
	images/mimetypes/directory.png
	images/mimetypes/text.png
	images/create_directory.png
	images/create_file.png: Change icons on filemanager
	adding some usability improvements

	* index.php: Fix out of bounds of the footer in the
	policy modules view for bug #2320

	* godmode/massive/massive_operations.php: Fix double
	advertment alert

	* include/help/en/help_profile.php
	include/help/es/help_profile.php: Make changes on the
	ACLs table to put it with the same permissions of the 
	wiki

2013-08-01 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Added new API function
	'api_set_enable_disable_agent'.

2013-08-01 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/events/events_list.php, extensions/agents_modules.php:
	removed the debug trace javascript code.
	
	* godmode/reporting/visual_console_builder.editor.js: fixed the
	add fake lines and prevent the remove lines.

2013-08-01 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/pandora_visual_console.js: fixed the javascript
	error when sometimes there is not a new lines.

2013-07-31 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.php: change the code
	to show the tabs in metaconsole after create a new visualmap.
	